--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -31,40 +31,76 @@
             </div>
             <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
               <div class="card-profile-actions py-4 mt-lg-0">
-                <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a>
+                <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">{{ utilisateur.role }}</a>
+                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">{{ utilisateur.etat }}</a>
               </div>
             </div>
             <div class="col-lg-4 order-lg-1">
               <div class="card-profile-stats d-flex justify-content-center">
                 <div>
-                  <span class="heading">22</span>
-                  <span class="description">Friends</span>
-                </div>
-                <div>
-                  <span class="heading">10</span>
-                  <span class="description">Photos</span>
-                </div>
-                <div>
-                  <span class="heading">89</span>
-                  <span class="description">Comments</span>
+                  <span class="heading"></span>
+                  <span class="description"></span>
                 </div>
               </div>
             </div>
           </div>
           <div class="text-center mt-5">
-            <h3>Jessica Jones
-              <span class="font-weight-light">, 27</span>
-            </h3>
-            <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Bucharest, Romania</div>
-            <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer</div>
-            <div><i class="ni education_hat mr-2"></i>University of Computer Science</div>
+            <h3>{{ utilisateur.nom }} {{  utilisateur.prenom }}</h3>
+            <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>{{ utilisateur.dateNaissance }}</div>
+            <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>{{ utilisateur.email }}</div>
+            <!-- <div><i class="ni education_hat mr-2"></i>University of Computer Science</div> -->
           </div>
           <div class="mt-5 py-5 border-top text-center">
             <div class="row justify-content-center">
               <div class="col-lg-9">
+                <h6>Mes préférences <button class="btn btn-sm btn-icon btn-primary" (click)="open(classic, 'Notification', 'sm')">
+                  <i class="fa fa-pencil"></i> <!-- Utilisez une icône appropriée pour la modification -->
+                </button></h6>
+                
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-4">
+            <ng-template #classic let-c="close" let-d="dismiss">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h6 class="modal-title" id="modal-title-default">personnaliser vos preferences</h6>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                    <span aria-hidden="true">×</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="row">
+                    <div class="col-lg-4 col-sm-6 mt-4 mt-md-0" *ngFor="let competence of competencesUtilisateur">
+                        <button style="border: none;" class="badge badge-pill badge-success text-uppercase">
+                             {{ competence.nomCompetence }}   <i class="fa fa-trash" style="color: red;cursor: pointer;" (click)="supprimerCompetenceUtilisateur(competence._id)"></i>
+                        </button>
+                      </div>                  
+                  </div>
+                  
+                  <div class="row">
+                      <div class="col-lg-4 col-sm-6 mt-4 mt-md-0" *ngFor="let competence of competences; let i = index">
+                          <button style="border: none;cursor: pointer;" class="badge badge-pill badge-primary text-uppercase" (click)="ajouterCompetenceUtilisateur(competence._id)">
+                              {{ competence.nomCompetence }}
+                          </button>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-link ml-auto" data-dismiss="modal" (click)="c('Close click')">fermer</button>
+                </div>
+              </div>
+            </ng-template>
+          </div>
+          
+
+          <div class="mt-5 py-5 border-top text-center">
+            <div class="row justify-content-center">
+              <div class="col-lg-9">
                 <p>An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-                <a href="javascript:void(0)">Show more</a>
+                <!-- <a href="javascript:void(0)">Show more</a> -->
               </div>
             </div>
           </div>
