--- a/src/app/manager/services/services.component.html
+++ b/src/app/manager/services/services.component.html
@@ -1,4 +1,36 @@
-<div class="py-5 bg-secondary">
+
+  <br><br>
+  <br><br>
+  <br><br>
+
+  <!-- <section class="section section-lg pt-lg-0 mt--200"> -->
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="row row-grid">
+            <div class="col-lg-4" *ngFor="let service of services">
+              <div class="card card-lift--hover shadow border-0">
+                <div class="card-body py-5">
+                <div class="rounded-circle mb-4">
+                    <img src="./assets/img/theme/team-1-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+                  </div>
+                  <h6 class="text-primary text-uppercase">{{service.nom}}</h6>
+                  <p class="description mt-3">Description: {{service.description}}</p>
+
+                  <button (click)="open(classic1, 'modal_mini', 'sm', service)" class="btn btn-sm btn-outline-success">Modifier</button>
+                    <button (click)="deleteService(service._id)" class="btn btn-sm btn-outline-warning">Supprimer</button>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- </section> -->
+
+
+  <div class="py-5 bg-secondary">
     <div class="container">
       <!-- Inputs (alternative) -->
       <div class="mb-3">
@@ -53,18 +85,7 @@
       <c-alert color="danger" *ngIf="afficherAlerteNumber">Numberrr.</c-alert>
       <button class="btn btn-1 btn-primary" (click)="addService()" type="button">Ajouter</button>
     </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3 col-6 mt-5 mt-sm-0" *ngFor="let service of services">
-        <small class="d-block text-uppercase font-weight-bold mb-4">{{service.nom}}</small>
-        <img src="./assets/img/theme/team-4-800x800.jpg" alt="Raised circle image" class="img-fluid rounded-circle shadow-lg" style="width: 150px;">
-        <button (click)="open(classic1, 'modal_mini', 'sm', service)" class="btn btn-1 btn-primary">Modifier</button>
-        <button (click)="deleteService(service._id)" class="btn btn-1 btn-warning">Supprimer</button>
-    </div>
-    </div>
-  </div>
+</div>
 
 
   <!-- Modal -->
@@ -104,19 +125,23 @@
                       <input class="form-control" [placeholder]="commissionField" type="text" [(ngModel)]="commissionField" (focus)="focus6=true" (blur)="focus6=false">
                     </div>
                   </div>
+                
                   <div class="form-group mb-3" [ngClass]="{'focused':focus7===true}">
                     <div class="input-group input-group-alternative">
-                      <input class="form-control" [placeholder]="dateDebutField" type="date" [(ngModel)]="dateDebutField" (focus)="focus7=true" (blur)="focus7=false">
+                        <input *ngIf="dateDebutField !== ''" class="form-control datepicker" [placeholder]="dateDebutField" id="date" name="dp1" [(ngModel)]="dateDebutField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus7=true" (blur)="focus7=false" type="text" autocomplete="off"/>
+                        <input *ngIf="dateDebutField == ''" class="form-control datepicker" placeholder="Date début" id="date" name="dp1" [(ngModel)]="dateDebutField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus7=true" (blur)="focus7=false" type="text" autocomplete="off"/>
                     </div>
                   </div>
                   <div class="form-group mb-3" [ngClass]="{'focused':focus8===true}">
                     <div class="input-group input-group-alternative">
-                      <input class="form-control" [placeholder]="dateFinField" type="date" [(ngModel)]="dateFinField" (focus)="focus8=true" (blur)="focus8=false">
+                        <input *ngIf="dateDebutField !== ''" class="form-control datepicker" [placeholder]="dateFinField" id="date" name="dp1" [(ngModel)]="dateFinField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus8=true" (blur)="focus8=false" type="text" autocomplete="off"/>
+                        <input *ngIf="dateDebutField == ''" class="form-control datepicker" placeholder="Date fin" id="date" name="dp1" [(ngModel)]="dateFinField" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus8=true" (blur)="focus8=false" type="text" autocomplete="off"/>
                     </div>
                   </div>
+                  
             
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4">Modifier</button>
+                  <button type="button" (click)="updateService()" class="btn btn-primary my-4">Modifier</button>
                 </div>
               </form>
             </div>
@@ -125,3 +150,6 @@
       </div>
     </ng-template>
   </div>
+
+
+  
