--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -110,9 +110,9 @@
                   <i class="fa fa-pencil"></i>
                 </button></h6>
                 <div class="row">
-                  <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let competence of competencesUtilisateur">
+                  <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let employe of favoris">
                       <button style="border: none;" class="badge badge-pill badge-success text-uppercase">
-                           {{ competence.nomCompetence }} 
+                           {{ employe.email }} 
                       </button>
                     </div>                  
                 </div>
@@ -132,18 +132,19 @@
                 <div class="modal-body">
                   <h6>mes favories</h6>
                   <div class="row">
-                    <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let competence of competencesUtilisateur">
+                    <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let employe of favoris">
                         <button style="border: none;" class="badge badge-pill badge-success text-uppercase">
-                             {{ competence.nomCompetence }}   <i class="fa fa-trash" style="color: red;cursor: pointer;" (click)="supprimerCompetenceUtilisateur(competence._id)"></i>
+                             {{ employe.nom }} {{ employe.prenom }}   
+                             <i class="fa fa-trash" style="color: red;cursor: pointer;" (click)="supprimerFavoriUtilisateur(employe._id)"></i>
                         </button>
                       </div>                  
                   </div>
                   <hr>
                   <h6>nos employer</h6>  
                   <div class="row">
-                    <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let competence of competences; let i = index">
-                          <button style="border: none;cursor: pointer;" class="badge badge-pill badge-primary text-uppercase" (click)="ajouterCompetenceUtilisateur(competence._id)">
-                              {{ competence.nomCompetence }}
+                    <div class="col-lg-3 col-sm-6 mt-3 mt-md-0" *ngFor="let employe of employes; let i = index">
+                          <button style="border: none;cursor: pointer;" class="badge badge-pill badge-primary text-uppercase" (click)="ajouterFavoriUtilisateur(employe._id)">
+                            {{ employe.nom }} {{ employe.prenom }}   
                           </button>
                       </div>
                   </div>
