--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
   <div class="position-relative">
     <!-- Hero for FREE version -->
@@ -52,62 +53,9 @@
     </section>
   </div>
 
+  <a href="#/manager" class="text-light">
+    <small>Manager</small>
+  </a>
 
-
-  <div class="py-5 bg-secondary">
-    <div class="container">
-      <!-- Inputs (alternative) -->
-      <div class="mb-3">
-        <small class="text-uppercase font-weight-bold">Nouveau Service</small>
-      </div>
-      <div class="row">
-          <div class="col-lg-6 col-sm-6 form-group">
-            <input type="text" placeholder="Intitulé" id="intitule" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-6 col-sm-6 form-group">
-            <input type="textearea" placeholder="Description" id="description" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-4 col-sm-4 form-group">
-            <input type="text" placeholder="Prix" id="prix" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-4 col-sm-4 form-group">
-            <input type="text" placeholder="Durée" id="duree" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-4 col-sm-4 form-group">
-            <input type="text" placeholder="Commission" id="commission" class="form-control form-control-alternative" />
-          </div>
-          <div class="col-lg-6 col-sm-6 form-group" [ngClass]="{'focused':focus===true}">
-            <input class="form-control datepicker" id="debut" placeholder="Date début" name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" (focus)="focus=true" (blur)="focus=false" type="text" autocomplete="off"/>
-          </div>
-          <div class="col-lg-6 col-sm-6 form-group" [ngClass]="{'focused':focus1===true}">
-            <input class="form-control datepicker" id="fin" placeholder="Date fin" name="dp1" [(ngModel)]="model1" ngbDatepicker #d1="ngbDatepicker" (click)="d1.toggle()" (focus)="focus1=true" (blur)="focus1=false" type="text" autocomplete="off"/>
-          </div> 
-        
-      </div>
-
-      <div class="mb-3">
-        <small class="text-uppercase font-weight-bold">Checkboxes</small>
-      </div>
-      <div class="row" >
-        <div class="col-lg-4 col-sm-6 mt-4 mt-md-0" *ngFor="let competence of competences">
-          <div class="custom-control custom-checkbox mb-3" >
-            <input class="custom-control-input" [(ngModel)]=competence._id type="checkbox">
-            <label class="custom-control-label" for="customCheck1">
-              <span>{{competence.nomCompetence}}</span>
-            </label>
-          </div>
-        </div>
-      </div>
-      <button class="btn btn-1 btn-primary" (click)="addService()" type="button">Ajouter</button>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-3 col-6 mt-5 mt-sm-0" *ngFor="let service of services">
-        <small class="d-block text-uppercase font-weight-bold mb-4">{{service.nom}}</small>
-        <img src="./assets/img/theme/team-4-800x800.jpg" alt="Raised circle image" class="img-fluid rounded-circle shadow-lg" style="width: 150px;">
-      </div>
-    </div>
-  </div>
+  
 </main>
