--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -67,11 +67,26 @@
                                       <strong>Date de fin :</strong> {{ service.dateFin | date }}
                                   </div>
                               </div>
+                              <hr>
+                              <div class="row">
+                                <div class="col-md-12">
+                                  <h5>no employe disponible</h5>
+                                  <div class="row">
+                                    <div class="col-md-3"  *ngFor="let employe of employes; let i = index">
+                                        <img src="./assets/img/theme/team-1-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+                                        <div class="pt-4 text-center">
+                                            <input type="checkbox" class="form-control"><span class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
+                                        </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
                               <div class='row'>
                                   <div class='col-md-12 text-center mt-4'>
                                       <a href="javascript:void(0)" class="btn btn-warning" (click)="open(classic, '', '')">Prendre rendez-vous</a>
                                   </div>
                               </div>
+
 
                               <!-- Modal -->
 
@@ -87,17 +102,6 @@
                                     </button>
                                   </div>
                                   <div class="modal-body">
-
-                                    <div class="row">
-                                      <div class="col-md-3"  *ngFor="let employe of employes; let i = index">
-                                          <img src="./assets/img/theme/team-1-800x800.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-                                          <div class="pt-4 text-center">
-                                              <input type="checkbox" class="form-control"><span class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
-                                          </div>
-                                      </div>
-                                    </div>
-
-
                                     <div class="tabs mt-3">
                                       <ul class="nav nav-tabs" id="myTab" role="tablist"> 
                                         <li class="nav-item" role="presentation"> 
@@ -155,11 +159,20 @@
           </div>
       </div>
   </div>
-  
   </section>
   
   <section class="section section-lg" style="padding-top: 0px;">
     <div class="container">
+
+
+
+
+      <div id="calendar-container">
+      </div>
+
+
+
+
       <div class="row row-grid align-items-center">
         <div class="col-md-6 order-md-2">
           <img src="./assets/img/theme/2.png" class="img-fluid floating">
