--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -84,10 +84,65 @@
                                   <p>
                                     <strong>Service Duration</strong>
                                   </p>
-                                
-                                  <div class='fc-event service-duration'>
-                                    <div class='fc-event-main'>Service Duration</div>
+                                    <div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event'>
+                                      <div class='fc-event-main'>My Event 1</div>
+                                    </div>
+                                    <div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event'>
+                                      <div class='fc-event-main'>My Event 2</div>
+                                    </div>
+                                    <div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event'>
+                                      <div class='fc-event-main'>My Event 3</div>
+                                    </div>
+                                    <div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event'>
+                                      <div class='fc-event-main'>My Event 4</div>
+                                    </div>
+                                    <div class='fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event'>
+                                      <div class='fc-event-main'>My Event 5</div>
+                                    </div>
+                                  
+                                    <p>
+                                      <input type='checkbox' id='drop-remove' />
+                                      <label for='drop-remove'>remove after drop</label>
+                                    </p>
                                   </div>
+                                  
+                                  <div id='calendar-container'>
+                                    <div id='calendar'></div>
+                                  </div>
+
+                                  <style>
+                                    html, body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+#external-events {
+  z-index: 2;
+  top: 20px;
+  left: 20px;
+  width: 150px;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+  background: #eee;
+}
+
+#external-events .fc-event {
+  cursor: move;
+  margin: 3px 0;
+}
+
+#calendar-container {
+  z-index: 1;
+  margin-left: 200px;
+}
+
+#calendar {
+  max-width: 1100px;
+  margin: 20px auto;
+}
+                                  </style>
                                 </div>
                                 
                                 <div id='calendar-container'>
@@ -168,7 +223,6 @@
                           </div>
                       </div>
                   </div>
-              </div>
           </div>
       </div>
   </div>
