ajout de navbar dans les pages de manager

--- a/src/app/manager/depenses/depenses.component.html
+++ b/src/app/manager/depenses/depenses.component.html
@@ -1,3 +1,5 @@
+<app-navbar-manager></app-navbar-manager>
+
 <section class="section section-lg bg-gradient-default">
     <div class="container pt-lg pb-300">
       <div class="row text-center justify-content-center">
