--- a/src/app/manager/employes/employes.component.html
+++ b/src/app/manager/employes/employes.component.html
@@ -1,3 +1,62 @@
+<app-navbar-manager></app-navbar-manager>
+<br><br><br>
+
+
+<!-- <section class="section section-lg bg-gradient-default">
+    <div class="container pt-lg pb-300">
+      <div class="row text-center justify-content-center">
+        <div class="col-lg-10">
+          <h2 class="display-3 text-white">Build something</h2>
+          <p class="lead text-white">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record low maximum sea ice extent tihs year down to low ice.</p>
+        </div>
+      </div>
+    </div> -->
+    <!-- SVG separator -->
+    <!-- <div class="separator separator-bottom separator-skew zindex-100">
+      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+      </svg>
+    </div>
+  </section> -->
+
+<!-- <section class="section section-lg pt-lg-0 section-contact-us">
+    <div class="container">
+      <div class="row justify-content-center mt--300">
+        <div class="col-lg-8">
+          <div class="card bg-gradient-secondary shadow">
+            <div class="card-body p-lg-5">
+              <h4 class="mb-1">Want to work with us?</h4>
+              <p class="mt-0">Your project is very important to us.</p>
+              <div class="form-group mt-5" [ngClass]="{'focused':focus===true}">
+                <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-user-run"></i></span>
+                  </div>
+                  <input class="form-control" placeholder="Your name" type="text" (focus)="focus=true" (blur)="focus=false">
+                </div>
+              </div>
+              <div class="form-group" [ngClass]="{'focused':focus2===true}">
+                <div class="input-group input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                  </div>
+                  <input class="form-control" placeholder="Email address" type="email" (focus)="focus2=true" (blur)="focus2=false">
+                </div>
+              </div>
+              <div class="form-group mb-4">
+                <textarea class="form-control form-control-alternative" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
+              </div>
+              <div>
+                <button type="button" class="btn btn-default btn-round btn-block btn-lg">Send Message</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
+
+
 <div class="py-5 bg-secondary">
     <div class="container">
       <!-- Inputs (alternative) -->
@@ -64,7 +123,9 @@
               <div class="mt-3">
                 <button (click)="open(classic1, 'modal_mini', 'sm', employe)" class="btn btn-sm btn-primary">Modifier</button>
                 <button (click)="deleteEmployee(employe._id)" class="btn btn-sm btn-warning">Supprimer</button>
-    
+              </div>
+              <div class="mt-3">
+                <button class="btn btn-sm btn-warning" (click)="redirectHoraireEmploye(employe)">Modifier l'horaire de travail</button>
               </div>
             </div>
           </div>
