--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -94,7 +94,8 @@
                           <p>
                             <strong>Prenez le service et mettez le ou vous voulez</strong>
                           </p>
-                          <div class='fc-event'>{{ service.nom }}</div>
+                          <div class='fc-event' [attr.data-duration]="service.duration">{{ service.nom }}</div>
+
                           <style>
                             .fc-event {
                               background-color: #3788d8;
