drag and drop mandeha tsara

--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -94,8 +94,7 @@
                           <p>
                             <strong>Prenez le service et mettez le ou vous voulez</strong>
                           </p>
-                          <div class='fc-event' [attr.data-duration]="service.duration">{{ service.nom }}</div>
-
+                          <div class='fc-event'>{{ service.nom }}</div>
                           <style>
                             .fc-event {
                               background-color: #3788d8;
