--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -237,7 +237,7 @@
                 <ng-template #classic let-c="close" let-d="dismiss">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h6 class="modal-title" id="modal-title-default">finalisation de payement</h6>
+                      <h6 class="modal-title" id="modal-title-default">finalisation de payement pour un render-vous le {{nouvelIntervalDebut}}</h6>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                         (click)="d('Cross click')">
                         <span aria-hidden="true">×</span>
@@ -283,7 +283,7 @@
                                   </div>
                                 </div>
                                 <div class="px-5 pay">
-                                  <button class="btn btn-warning btn-block">paye {{ service.prix }} Ar</button>
+                                  <button class="btn btn-warning btn-block" (click)="confirmeRDV()">paye {{ service.prix }} Ar</button>
                                 </div>
                               </div>
                             </div>
